--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "axios": "^0.27.2",
+    "flowbite": "^1.4.7",
+    "flowbite-react": "^0.0.25",
+    "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
